<resources>
    <!--MainMenu-->
    <string name="app_name">JShoppingListGenerator</string>
    <string name="shoppinglists">ShoppingLists</string>
    <string name="meals">Meals</string>
    <string name="generate">Generate</string>
    <string name="shoppinglistgenerator">ShoppingListGenerator</string>
    <string name="ingredients">Ingredients</string>
    <string name="which_category_would_you_like_to_browse">Which category would you like to browse ?</string>

    <!--VariousButtons-->
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="reload">Reload</string>
    <string name="back">Back</string>
    <string name="delete_button">delete button</string>
    <string name="set_button">set button</string>

    <!--SetupMenu-->
    <string name="application_setup">Application setup</string>
    <string name="database">Database</string>
    <string name="password">Password</string>
    <string name="user_name">User name</string>
    <string name="language">Language</string>
    <string-array name="languages">
        <item>French</item>
        <item>English</item>
    </string-array>

    <string name="category">Category name</string>
    <string name="item_name">Item name</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="defaultPort">3306</string>
    <string name="quantity">Quantity</string>
</resources>
