<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupActivity">

    <TextView
        android:id="@+id/setup_title"
        style="@style/subTitle"
        android:text="@string/application_setup"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/save_button"
        style="@style/bottomButton"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/back_button"
        style="@style/bottomButton"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/setupFields"
        android:layout_width="355dp"
        android:layout_height="388dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setup_title">

        <EditText
            android:id="@+id/portInput"
            style="@style/formInput"
            android:inputType="textPersonName|number"
            android:labelFor="@id/hostText"
            android:text="@string/defaultPort"
            app:layout_constraintBottom_toBottomOf="@+id/portText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/portText"
            app:layout_constraintTop_toTopOf="@+id/portText" />

        <TextView
            android:id="@+id/portText"
            style="@style/formLabel"
            android:text="@string/port"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hostText" />

        <EditText
            android:id="@+id/hostInput"
            style="@style/formInput"
            android:inputType="textPersonName"
            android:labelFor="@id/hostText"
            app:layout_constraintBottom_toBottomOf="@+id/hostText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/hostText"
            app:layout_constraintTop_toTopOf="@+id/hostText" />

        <TextView
            android:id="@+id/hostText"
            style="@style/formLabel"
            android:text="@string/host"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/databaseText" />

        <TextView
            android:id="@+id/languageText"
            style="@style/formLabel"
            android:text="@string/language"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/portText" />

        <EditText
            android:id="@+id/databaseInput"
            style="@style/formInput"
            android:inputType="textPersonName"
            android:labelFor="@id/databaseText"
            app:layout_constraintBottom_toBottomOf="@+id/databaseText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/databaseText"
            app:layout_constraintTop_toTopOf="@+id/databaseText" />

        <TextView
            android:id="@+id/databaseText"
            style="@style/formLabel"
            android:text="@string/database"
            app:layout_constraintEnd_toStartOf="@+id/databaseInput"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordText" />

        <TextView
            android:id="@+id/passwordText"
            style="@style/formLabel"
            android:text="@string/password"
            app:layout_constraintEnd_toStartOf="@+id/passwordInput"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNameText" />

        <TextView
            android:id="@+id/userNameText"
            style="@style/formLabel"
            android:text="@string/user_name"
            app:layout_constraintEnd_toStartOf="@+id/userNameInput"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <EditText
            android:id="@+id/passwordInput"
            style="@style/formInput"
            android:layout_height="0dp"
            android:inputType="textPassword"
            android:labelFor="@id/passwordText"
            app:layout_constraintBottom_toBottomOf="@+id/passwordText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/passwordText"
            app:layout_constraintTop_toTopOf="@+id/passwordText" />

        <EditText
            android:id="@+id/userNameInput"
            style="@style/formInput"
            android:inputType="textPersonName"
            android:labelFor="@id/userNameText"
            app:layout_constraintBottom_toBottomOf="@+id/userNameText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/userNameText"
            app:layout_constraintTop_toTopOf="@+id/userNameText" />

        <Spinner
            android:id="@+id/languageInput"
            style="@style/formInput"
            android:layout_height="0dp"
            android:entries="@array/languages"
            android:labelFor="@id/languageText"
            app:layout_constraintBottom_toBottomOf="@+id/languageText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/languageText"
            app:layout_constraintTop_toTopOf="@+id/languageText" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>